--- a/templates/Base.html
+++ b/templates/Base.html
@@ -37,6 +37,15 @@
     </main>
 </body>
 <style>
+    nav, nav ul {
+	flex-direction: column;
+}
+
+@media (min-width: 800px) {
+	nav, nav ul {
+		flex-direction: row;
+	}
+}
     [data-theme=light],
     :root:not([data-theme=dark]),
     :host(:not([data-theme=dark])) {
