updated look of site

--- a/templates/Materials.html
+++ b/templates/Materials.html
@@ -1,45 +1,64 @@
 {% extends "Base.html" %}
 {% block title %} G-Forces Effect On The Body {% endblock %}
 {% block body %}
-    <p id="isPasted"><strong><u>Materials/Budget:</u></strong></p>
-<ul>
-<li>
-<p>Chloroform ($25)</p>
-</li>
-<li>
-<p>Recycled Bottles ($0)</p>
-</li>
-<li>
-<p>Vinegar ($4.98)&nbsp;</p>
-</li>
-<li>
-<p>Baking Soda ($5)</p>
-</li>
-<li>
-<p>Hydrogen Peroxide ($15)</p>
-</li>
-<li>
-<p>Yeast ($7)</p>
-</li>
-<li>
-<p>Soap ($2.99)</p>
-</li>
-<li>
-<p>EVA Foam ($20)</p>
-</li>
-<li>
-<p>100 Large Roaches ($32)</p>
-</li>
-<li>
-<p>Gloves ($0)</p>
-</li>
-<li>
-<p>Dissection Tools ($0)</p>
-</li>
-</ul>
-<p>&nbsp;</p>
-<p><u>Total Budget: $111.97</u></p>
-<p>&nbsp;</p>
+    <div class="grid">
+    <table style="width:100%; margin-left:auto; margin-right:auto;">
+<tbody>
+<tr>
+<th>Material</th>
+<th>$</th>
+</tr>
+<tr >
+<td>&nbsp;Chloroform</td>
+<td>&nbsp;25</td>
+</tr>
+<tr>
+<td>&nbsp;Recycled Bottles</td>
+<td>&nbsp;0</td>
+</tr>
+<tr>
+<td>&nbsp;Vinegar</td>
+<td>&nbsp;4.98</td>
+</tr>
+<tr>
+<td>&nbsp;Baking Soda</td>
+<td>&nbsp;5</td>
+</tr>
+<tr>
+<td>&nbsp;Hydrogen Peroxide</td>
+<td>&nbsp;15</td>
+</tr>
+<tr>
+<td>&nbsp;Yeast</td>
+<td>&nbsp;7</td>
+</tr>
+<tr>
+<td>&nbsp;Soap</td>
+<td>&nbsp;2.99</td>
+</tr>
+<tr>
+<td>&nbsp;Eva Foam</td>
+<td>&nbsp;20</td>
+</tr>
+<tr>
+<td>&nbsp;100 Large Roaches</td>
+<td>&nbsp;32</td>
+</tr>
+<tr>
+<td>&nbsp;Gloves</td>
+<td>&nbsp;0</td>
+</tr>
+<tr>
+<td>&nbsp;Dissections Tools</td>
+<td>&nbsp;0</td>
+</tr>
+<tr>
+<td class="total">&nbsp;<strong>Total:</strong></td>
+<td>&nbsp;<strong>111.97</strong></td>
+</tr>
+</tbody>
+</table>
+        <div>
 <p><strong><u>Students should Bring:</u></strong></p>
 <ul>
 <li>
@@ -49,5 +68,15 @@
 <p>Extra clothes (if dirtied on third day)</p>
 </li>
 </ul>
-<p>&nbsp;</p>
+        </div>
+    </div>
+
+    <style>
+    th {
+        font-weight: bold;
+    }
+    td.total {
+        text-align: right;
+    }
+    </style>
 {% endblock %}s
