--- a/templates/Main.html
+++ b/templates/Main.html
@@ -3,8 +3,37 @@
 {% block body %}
     <p><br></p>
     <article style="background-color: #FFb74d"><h2 style="color: black; text-align: center">G-Forces are utilized in a variety of different sports and science, this CSP aims to help groups study the effects of g-forces on bodies during these activities.</h2></article>
-    <img src="{{url_for('static', filename='Imgs/Rocket.gif')}}" alt="Roach on rocket">
+    <div class="grid">
+    <div class="imgHolder">
+        <img src="{{url_for('static', filename='Imgs/Rocket.gif')}}" alt="Roach on rocket" style="object-fit: cover; height: 100%">
+        <span><a href="https://www.instagram.com/pilomii/">@pilomii</a></span>
+    </div>
+<div>
     <h2 style="color: black">Objective and Global Issue</h2>
     <blockquote>In a world of constantly moving and changing people, we yearn for ways to travel faster and better. The issue? G-forces. G-forces are what holds back the human body and other creatures from traveling and breakneck speeds. As it stands there is no way to get from Tokyo to New York in an hour&hellip; but what if there was? The objective of this CSP is to help students recognize the effects of G-forces on the human body, and to create and test an experiment to help conduct research on the effects of G-forces on insectoids. This research will help us in the future to research how cockroaches can withstand such high G-force, and to apply that knowledge to future research projects.
 </blockquote>
-{% endblock %}s
+    </div>
+        </div>
+
+
+<style>
+    .imgHolder {
+        position: relative;
+        border-style: double;
+        border-width: medium;
+    }
+    .imgHolder span {
+        position: absolute;
+        left: 10px;
+        bottom: 10px;
+        font-size: 12px;
+    }
+    .imgHolder span a {
+        text-decoration: none;
+    }
+    .imgHolder span a:hover {
+        text-decoration: none;
+        color: #FFeb3b;
+    }
+</style>
+{% endblock %}
