removed insta link

--- a/templates/Main.html
+++ b/templates/Main.html
@@ -6,7 +6,7 @@
     <div class="grid">
     <div class="imgHolder">
         <img src="{{url_for('static', filename='Imgs/Rocket.gif')}}" alt="Roach on rocket" style="object-fit: cover; height: 100%">
-        <span><a href="https://www.instagram.com/pilomii/">@pilomii</a></span>
+        <span>@pilomii</span>
     </div>
 <div>
     <h2 style="color: black">Objective and Global Issue</h2>
