added cockroach icon

--- a/templates/Base.html
+++ b/templates/Base.html
@@ -6,6 +6,7 @@
     <title>{% block title %}Django Boilerplate{% endblock title %}</title>
     <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
+<link rel="icon" type="image/x-icon" href="../static/Imgs/10778186.ico">
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/@picocss/pico@2/css/pico.min.css"
