--- a/templates/Base.html
+++ b/templates/Base.html
@@ -28,6 +28,7 @@
             <li><a style="color: #000000;" href="/Materials" class="contrast">Materials/Budget</a></li>
             <li><a style="color: #000000;" href="/Connections" class="contrast">Connections</a></li>
               <li><a style="color: #000000;" href="/Procedure" class="contrast">Procedure</a></li>
+              <li><a style="color: #000000;" href="/Deliverables" class="contrast">Deliverables</a></li>
               <li><a href="https://docs.google.com/document/d/1JYIaKK7ti-BzZw03ueMwvU_VxrrzODHMmwkbZlJ2bgA/edit?usp=sharing" role="button">Doc</a></li>
           </ul>
         </nav>
