--- a/templates/Timeline.html
+++ b/templates/Timeline.html
@@ -3,7 +3,7 @@
 {% block body %}
     <div class="timeline">
     <div class="time">
-        <h3>Day One</h3>
+        <h3 class="day">Day One</h3>
         <ul>
         <li>7:45-8:00) Gather the students and introduce the topic</li>
         <li>8:00-10:00) Research different effects of G-Forces on the body, as well as different rocket designs</li>
@@ -13,7 +13,7 @@
         <li>3:00-3:15) Conclude for day and dismissal</li>
         </ul>
     </div>
-        <div class="time"><h3>Day Two</h3>
+        <div class="time"><h3 class="day">Day Two</h3>
 <ul>
 <li>7:45-8:00) Reintroduce project idea</li>
 <li>8:00-11:30) Split off into groups and begin building rockets with provided materials</li>
@@ -22,7 +22,7 @@
 <li>1:30-3:00) Strap cockroaches to rockets, launch rockets and record data</li>
 <li>3:00-3:15) Conclude for day and dismissal</li>
 </ul></div>
-    <div class="time"><h3>Day Three</h3>
+    <div class="time"><h3 class="day">Day Three</h3>
 <ul>
 <li>7:45-8:00) Reintroduce project idea</li>
 <li>8:00-11:30) Dissect control roaches and record data</li>
@@ -36,10 +36,9 @@
 
 
     <style>
-    h3 {
+    h3.day {
         color: black;
     }
-body { font-family: Helvetica; }
 
 div.timeline {
   width: 80%;
