--- a/templates/Materials.html
+++ b/templates/Materials.html
@@ -1,82 +1,93 @@
 {% extends "Base.html" %}
 {% block title %} G-Forces Effect On The Body {% endblock %}
 {% block body %}
-    <div class="grid">
-    <table style="width:100%; margin-left:auto; margin-right:auto;">
-<tbody>
-<tr>
-<th>Material</th>
-<th>$</th>
-</tr>
-<tr >
-<td>&nbsp;Chloroform</td>
-<td>&nbsp;25</td>
-</tr>
-<tr>
-<td>&nbsp;Recycled Bottles</td>
-<td>&nbsp;0</td>
-</tr>
-<tr>
-<td>&nbsp;Vinegar</td>
-<td>&nbsp;4.98</td>
-</tr>
-<tr>
-<td>&nbsp;Baking Soda</td>
-<td>&nbsp;5</td>
-</tr>
-<tr>
-<td>&nbsp;Hydrogen Peroxide</td>
-<td>&nbsp;15</td>
-</tr>
-<tr>
-<td>&nbsp;Yeast</td>
-<td>&nbsp;7</td>
-</tr>
-<tr>
-<td>&nbsp;Soap</td>
-<td>&nbsp;2.99</td>
-</tr>
-<tr>
-<td>&nbsp;Eva Foam</td>
-<td>&nbsp;20</td>
-</tr>
-<tr>
-<td>&nbsp;100 Large Roaches</td>
-<td>&nbsp;32</td>
-</tr>
-<tr>
-<td>&nbsp;Gloves</td>
-<td>&nbsp;0</td>
-</tr>
-<tr>
-<td>&nbsp;Dissections Tools</td>
-<td>&nbsp;0</td>
-</tr>
-<tr>
-<td class="total">&nbsp;<strong>Total:</strong></td>
-<td>&nbsp;<strong>111.97</strong></td>
-</tr>
-</tbody>
-</table>
-        <div>
-<p><strong><u>Students should Bring:</u></strong></p>
-<ul>
-<li>
-<p>Charged ipads</p>
-</li>
-<li>
-<p>Extra clothes (if dirtied on third day)</p>
-</li>
-</ul>
+    <article>
+        <div class="grid">
+            <table style="width:100%; margin-left:auto; margin-right:auto;">
+                <tbody>
+                <tr>
+                    <th>Material</th>
+                    <th>$</th>
+                </tr>
+                <tr>
+                    <td>&nbsp;Chloroform</td>
+                    <td>&nbsp;25</td>
+                </tr>
+                <tr>
+                    <td>&nbsp;Recycled Bottles</td>
+                    <td>&nbsp;0</td>
+                </tr>
+                <tr>
+                    <td>&nbsp;Vinegar</td>
+                    <td>&nbsp;4.98</td>
+                </tr>
+                <tr>
+                    <td>&nbsp;Baking Soda</td>
+                    <td>&nbsp;5</td>
+                </tr>
+                <tr>
+                    <td>&nbsp;Hydrogen Peroxide</td>
+                    <td>&nbsp;15</td>
+                </tr>
+                <tr>
+                    <td>&nbsp;Yeast</td>
+                    <td>&nbsp;7</td>
+                </tr>
+                <tr>
+                    <td>&nbsp;Soap</td>
+                    <td>&nbsp;2.99</td>
+                </tr>
+                <tr>
+                    <td>&nbsp;Eva Foam</td>
+                    <td>&nbsp;20</td>
+                </tr>
+                <tr>
+                    <td>&nbsp;100 Large Roaches</td>
+                    <td>&nbsp;32</td>
+                </tr>
+                <tr>
+                    <td>&nbsp;Gloves</td>
+                    <td>&nbsp;0</td>
+                </tr>
+                <tr>
+                    <td>&nbsp;Dissections Tools</td>
+                    <td>&nbsp;0</td>
+                </tr>
+                <tr>
+                    <td class="total">&nbsp;<strong>Total:</strong></td>
+                    <td>&nbsp;<strong>111.97</strong></td>
+                </tr>
+                </tbody>
+            </table>
+            <div>
+                <p><strong><u>Students should Bring:</u></strong></p>
+                <ul>
+                    <li>
+                        <p>Charged ipads</p>
+                    </li>
+                    <li>
+                        <p>Extra clothes (if dirtied on third day)</p>
+                    </li>
+                </ul>
+            </div>
         </div>
-    </div>
+    </article>
 
     <style>
-    th {
-        font-weight: bold;
-    }
-    td.total {
-        text-align: right;
-    }
+        tr, table, th, td, tbody {
+            background-color: #FFb74d;
+        }
+
+        article {
+            background-color: #FFb74d
+        }
+
+        th {
+            font-weight: bold;
+        }
+
+        td.total {
+            text-align: right;
+        }
     </style>
 {% endblock %}s
