--- a/templates/Procedure.html
+++ b/templates/Procedure.html
@@ -1,6 +1,7 @@
 {% extends "Base.html" %}
 {% block title %} G-Forces Effect On The Body {% endblock %}
 {% block body %}
+    <article>
     <ol>
 <li class="potato" style="font-weight: 400;"><span style="font-weight: 400;">Read the background information and objective</span></li>
 <li class="potato" style="font-weight: 400;"><span style="font-weight: 400;">Create a group document to share research, data, and other information with the teacher.</span></li>
@@ -46,6 +47,7 @@
 </ul>
 <li class="potato" style="font-weight: 400;"><span style="font-weight: 400;">Have the groups present the data and findings in a slideshow presentation</span></li>
         </ol>
+        </article>
     <style>
     </style>
 {% endblock %}
