- updated font - no longer able to select lines on timeline.html

--- a/templates/Base.html
+++ b/templates/Base.html
@@ -41,6 +41,10 @@
 </main>
 </body>
 <style>
+    body {
+        font-family: roboto, sans-serif;
+    }
+    
     nav, nav ul {
         flex-direction: column;
     }
